# licitscope

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md
apps/api/: Dockerfile  README.md  pyproject.toml
apps/api/app/: __init__.py  main.py
apps/api/app/clients/: pncp.py  pncp_parser.py
apps/api/app/core/: config.py  errors.py  logging.py  middleware.py
apps/api/app/db/: session.py
apps/api/app/enrichment/: __init__.py  pipeline.py  providers.py  scoring.py  similarity.py  taxonomy.py
apps/api/app/models/: __init__.py  agency.py  contract.py  enrichment.py  enums.py  ingestion.py  opportunity.py  supplier.py  watchlist.py
apps/api/app/repositories/: agencies.py  contracts.py  enrichment.py  ingestion.py  opportunities.py  suppliers.py
apps/api/app/routers/: agencies.py  analytics.py  contracts.py  health.py  meta.py  opportunities.py  search.py  suppliers.py  watchlists.py
apps/api/app/schemas/: __init__.py  agency.py  common.py  contract.py  opportunity.py  supplier.py
apps/api/app/scripts/: dump_openapi.py  run_enrichment.py  run_ingestion.py  seed.py
apps/api/app/services/: analytics.py  ingestion.py  pricing.py  search.py
apps/api/tests/: conftest.py  test_api.py  test_dates.py  test_filters.py  test_fingerprint.py  test_ingestion.py  test_middleware.py  test_money.py  test_openapi_contract.py  test_pncp_parser.py  test_pricing.py  test_repositories.py  test_scoring.py  test_taxonomy.py  test_text.py  test_watchlists.py
(+76 files in other folders)
